--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 
 <head>
   <meta charset="utf-8">
+  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+
   <title>TinDog</title>
+
+  <meta name='viewport' content='width=device-width, initial-scale=1'>
 
   <!-- Google Fonts -->  
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu&display=swap" rel="stylesheet">
